@@ -1,3 +1,7 @@
+2015-05-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Used reverseOrder flag for inverting sorted records, resolves #67132
+
 2015-05-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added hook for processing connector parameters, resolves #66796 (thanks to Julien Henchoz)
